<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_title_label"/>
    <EditText
        android:id="@+id/inv_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_item_title"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_details_label"/>
    <Button
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/inv_item_bought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_bought_label"/>
</LinearLayout>