<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_title_label"/>
    <EditText
        android:id="@+id/inv_item_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_item_title"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_quantity_label"/>
    <EditText
        android:id="@+id/inv_item_quantity_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_item_title"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_item_expiration_date_label"/>
    <DatePicker
        android:id="@+id/inv_item_expiration_date_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>